improvements & add headless mode for client